--- a/eXchange/Base.lproj/Main.storyboard
+++ b/eXchange/Base.lproj/Main.storyboard
@@ -495,7 +495,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="WZA-Vb-Bef" customClass="I">
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="WZA-Vb-Bef" customClass="I">
                                 <rect key="frame" x="0.0" y="64" width="600" height="216"/>
                                 <date key="date" timeIntervalSinceReferenceDate="481252159.44744402">
                                     <!--2016-04-02 01:09:19 +0000-->
@@ -588,7 +588,7 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="hya-7L-6n2">
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="hya-7L-6n2">
                                 <rect key="frame" x="0.0" y="64" width="600" height="216"/>
                                 <date key="date" timeIntervalSinceReferenceDate="481667303.11089599">
                                     <!--2016-04-06 20:28:23 +0000-->
@@ -643,7 +643,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="F4k-MX-V8c" customClass="I">
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="F4k-MX-V8c" customClass="I">
                                 <rect key="frame" x="0.0" y="64" width="600" height="216"/>
                                 <date key="date" timeIntervalSinceReferenceDate="481252159.44744402">
                                     <!--2016-04-02 01:09:19 +0000-->
