--- a/eXchange/Base.lproj/Main.storyboard
+++ b/eXchange/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fwO-t4-XOn">
-                                                    <rect key="frame" x="110" y="20" width="450" height="21"/>
+                                                    <rect key="frame" x="110" y="20" width="414" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -88,7 +88,7 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="A0N-jQ-IJ9" firstAttribute="leading" secondItem="fwO-t4-XOn" secondAttribute="trailing" constant="-28" id="6SU-zw-PgC"/>
+                                                <constraint firstItem="A0N-jQ-IJ9" firstAttribute="leading" secondItem="fwO-t4-XOn" secondAttribute="trailing" constant="8" symbolic="YES" id="6SU-zw-PgC"/>
                                                 <constraint firstItem="A0N-jQ-IJ9" firstAttribute="width" secondItem="A0N-jQ-IJ9" secondAttribute="height" multiplier="1:1" id="6bK-VW-eoF"/>
                                                 <constraint firstItem="KQf-3s-vOY" firstAttribute="bottom" secondItem="zDE-Lj-orL" secondAttribute="bottom" constant="-16" id="EaJ-1V-Ag5"/>
                                                 <constraint firstItem="A0N-jQ-IJ9" firstAttribute="leading" secondItem="KQf-3s-vOY" secondAttribute="trailing" constant="8" symbolic="YES" id="c3i-bK-k86"/>
