pending now stores club for Sumer. also found a bug with the way I implemented counter (once meals get removed, all of the subsequent entry numbers should change)

--- a/eXchange/Base.lproj/Main.storyboard
+++ b/eXchange/Base.lproj/Main.storyboard
@@ -501,14 +501,8 @@
                                     <!--2016-04-02 01:09:19 +0000-->
                                 </date>
                             </datePicker>
-                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="arA-sF-KaF">
-                                <rect key="frame" x="0.0" y="289" width="600" height="100"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="Ktv-Md-Do1"/>
-                                </constraints>
-                            </pickerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal Selected:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fHO-EA-4mD">
-                                <rect key="frame" x="0.0" y="397" width="600" height="21"/>
+                                <rect key="frame" x="0.0" y="457" width="600" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -530,15 +524,21 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="arA-sF-KaF">
+                                <rect key="frame" x="0.0" y="288" width="600" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="Ktv-Md-Do1"/>
+                                </constraints>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="fHO-EA-4mD" firstAttribute="top" secondItem="arA-sF-KaF" secondAttribute="bottom" constant="8" symbolic="YES" id="5sQ-bX-xp5"/>
+                            <constraint firstItem="fHO-EA-4mD" firstAttribute="top" secondItem="arA-sF-KaF" secondAttribute="bottom" constant="19" id="5sQ-bX-xp5"/>
                             <constraint firstItem="WZA-Vb-Bef" firstAttribute="trailing" secondItem="arA-sF-KaF" secondAttribute="trailing" id="634-v9-u80"/>
                             <constraint firstItem="arA-sF-KaF" firstAttribute="leading" secondItem="WZA-Vb-Bef" secondAttribute="leading" id="7bJ-sa-SDe"/>
                             <constraint firstItem="rh7-Zk-h4d" firstAttribute="top" secondItem="kWs-ar-fGZ" secondAttribute="top" constant="20" id="BvS-y2-ZfW"/>
                             <constraint firstItem="WZA-Vb-Bef" firstAttribute="top" secondItem="rh7-Zk-h4d" secondAttribute="bottom" id="MlA-DG-lET"/>
-                            <constraint firstItem="arA-sF-KaF" firstAttribute="top" secondItem="WZA-Vb-Bef" secondAttribute="bottom" constant="9" id="OIl-n7-ijb"/>
+                            <constraint firstItem="arA-sF-KaF" firstAttribute="top" secondItem="WZA-Vb-Bef" secondAttribute="bottom" constant="8" id="OIl-n7-ijb"/>
                             <constraint firstAttribute="trailing" secondItem="WZA-Vb-Bef" secondAttribute="trailing" id="XuK-db-pjn"/>
                             <constraint firstItem="fHO-EA-4mD" firstAttribute="leading" secondItem="arA-sF-KaF" secondAttribute="leading" id="awE-ze-qrZ"/>
                             <constraint firstItem="arA-sF-KaF" firstAttribute="trailing" secondItem="fHO-EA-4mD" secondAttribute="trailing" id="dXU-4u-fVS"/>
@@ -575,7 +575,7 @@
                                     <navigationItem title="Reschedule a Request" id="jtf-39-3Tq">
                                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="05F-5O-s3a">
                                             <connections>
-                                                <action selector="cancelButton:" destination="Nai-Km-kL8" id="Be6-cW-7wL"/>
+                                                <action selector="cancelButton:" destination="Nai-Km-kL8" id="OPg-eo-VAW"/>
                                                 <segue destination="5JN-tD-u6d" kind="unwind" identifier="unwindCancel" unwindAction="myUnwindAction:" id="Lrs-zM-WFE"/>
                                             </connections>
                                         </barButtonItem>
@@ -595,9 +595,9 @@
                                 </date>
                             </datePicker>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dOk-Bb-86q">
-                                <rect key="frame" x="0.0" y="288" width="600" height="100"/>
+                                <rect key="frame" x="0.0" y="288" width="600" height="150"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="QZt-Gq-Cfe"/>
+                                    <constraint firstAttribute="height" constant="150" id="QZt-Gq-Cfe"/>
                                 </constraints>
                             </pickerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n05-da-BBs">
@@ -649,16 +649,10 @@
                                     <!--2016-04-02 01:09:19 +0000-->
                                 </date>
                             </datePicker>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal Selected:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3f-rA-TBc">
-                                <rect key="frame" x="0.0" y="410" width="600" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yen-od-Me3">
-                                <rect key="frame" x="0.0" y="288" width="600" height="100"/>
+                                <rect key="frame" x="0.0" y="288" width="600" height="150"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="oud-a1-kkC"/>
+                                    <constraint firstAttribute="height" constant="150" id="oud-a1-kkC"/>
                                 </constraints>
                             </pickerView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NYA-hQ-8qs">
@@ -678,6 +672,12 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal Selected:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3f-rA-TBc">
+                                <rect key="frame" x="0.0" y="480" width="600" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -685,7 +685,7 @@
                             <constraint firstItem="Yen-od-Me3" firstAttribute="leading" secondItem="I3f-rA-TBc" secondAttribute="leading" id="BJS-b9-Adh"/>
                             <constraint firstItem="Yen-od-Me3" firstAttribute="leading" secondItem="NYW-sZ-OZh" secondAttribute="leading" id="CvP-II-VTR"/>
                             <constraint firstItem="Yen-od-Me3" firstAttribute="trailing" secondItem="F4k-MX-V8c" secondAttribute="trailing" id="KQU-bg-16e"/>
-                            <constraint firstItem="I3f-rA-TBc" firstAttribute="top" secondItem="Yen-od-Me3" secondAttribute="bottom" constant="22" id="N0A-yl-cuv"/>
+                            <constraint firstItem="I3f-rA-TBc" firstAttribute="top" secondItem="Yen-od-Me3" secondAttribute="bottom" constant="42" id="N0A-yl-cuv"/>
                             <constraint firstItem="Yen-od-Me3" firstAttribute="trailing" secondItem="I3f-rA-TBc" secondAttribute="trailing" id="Rp9-Aa-tmg"/>
                             <constraint firstItem="NYA-hQ-8qs" firstAttribute="trailing" secondItem="F4k-MX-V8c" secondAttribute="trailing" id="RyU-m1-aIX"/>
                             <constraint firstAttribute="trailing" secondItem="Yen-od-Me3" secondAttribute="trailing" id="WIa-Lg-nnf"/>
