--- a/eXchange/Base.lproj/Main.storyboard
+++ b/eXchange/Base.lproj/Main.storyboard
@@ -555,7 +555,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QSe-6X-hpq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1958" y="543"/>
+            <point key="canvasLocation" x="1914" y="520"/>
         </scene>
         <!--Reschedule Request View Controller-->
         <scene sceneID="HXQ-gh-kHe">
@@ -569,6 +569,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="hya-7L-6n2">
+                                <rect key="frame" x="0.0" y="64" width="600" height="216"/>
+                                <date key="date" timeIntervalSinceReferenceDate="481667303.11089599">
+                                    <!--2016-04-06 20:28:23 +0000-->
+                                </date>
+                            </datePicker>
+                            <pickerView tag="1" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dOk-Bb-86q">
+                                <rect key="frame" x="0.0" y="247" width="600" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="QZt-Gq-Cfe"/>
+                                </constraints>
+                            </pickerView>
+                            <pickerView tag="2" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0ow-Hu-Pni">
+                                <rect key="frame" x="0.0" y="479" width="600" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="hBW-cN-XGr"/>
+                                </constraints>
+                            </pickerView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LbN-UG-Sfq">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
@@ -581,31 +599,13 @@
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" title="Done" id="9l3-WH-uKM">
                                             <connections>
-                                                <action selector="doneButton:" destination="Nai-Km-kL8" id="UU2-m1-0UH"/>
+                                                <action selector="doneButton:" destination="Nai-Km-kL8" id="dF5-pv-eOP"/>
                                                 <segue destination="5JN-tD-u6d" kind="unwind" identifier="unwindDone" unwindAction="myUnwindAction:" id="May-tm-skZ"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="hya-7L-6n2">
-                                <rect key="frame" x="0.0" y="64" width="600" height="216"/>
-                                <date key="date" timeIntervalSinceReferenceDate="481667303.11089599">
-                                    <!--2016-04-06 20:28:23 +0000-->
-                                </date>
-                            </datePicker>
-                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dOk-Bb-86q">
-                                <rect key="frame" x="0.0" y="288" width="600" height="150"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="QZt-Gq-Cfe"/>
-                                </constraints>
-                            </pickerView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n05-da-BBs">
-                                <rect key="frame" x="0.0" y="464" width="158" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -615,15 +615,18 @@
                             <constraint firstItem="hya-7L-6n2" firstAttribute="trailing" secondItem="LbN-UG-Sfq" secondAttribute="trailing" id="BXF-zx-UMz"/>
                             <constraint firstItem="LbN-UG-Sfq" firstAttribute="top" secondItem="Vdz-gO-sJs" secondAttribute="top" constant="20" id="G1k-AX-27F"/>
                             <constraint firstItem="dOk-Bb-86q" firstAttribute="top" secondItem="hya-7L-6n2" secondAttribute="bottom" constant="8" symbolic="YES" id="HtN-7O-iHm"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="0ow-Hu-Pni" secondAttribute="bottom" constant="33" id="Q7M-uk-b1t"/>
                             <constraint firstItem="dOk-Bb-86q" firstAttribute="leading" secondItem="hya-7L-6n2" secondAttribute="leading" id="WvX-T6-Zfp"/>
+                            <constraint firstItem="0ow-Hu-Pni" firstAttribute="leading" secondItem="dOk-Bb-86q" secondAttribute="leading" id="nWe-zL-O2w"/>
                             <constraint firstItem="dOk-Bb-86q" firstAttribute="trailing" secondItem="hya-7L-6n2" secondAttribute="trailing" id="nrF-We-12z"/>
                             <constraint firstItem="hya-7L-6n2" firstAttribute="leading" secondItem="LbN-UG-Sfq" secondAttribute="leading" id="oNE-rZ-k0u"/>
+                            <constraint firstItem="0ow-Hu-Pni" firstAttribute="trailing" secondItem="dOk-Bb-86q" secondAttribute="trailing" id="r1u-3H-lQs"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="clubPicker" destination="dOk-Bb-86q" id="cht-Op-4BB"/>
                         <outlet property="datePicker" destination="hya-7L-6n2" id="jEi-qq-QVM"/>
-                        <outlet property="mealSelectedLabel" destination="n05-da-BBs" id="9uO-OZ-KNN"/>
+                        <outlet property="mealTypePicker" destination="0ow-Hu-Pni" id="0yE-Vo-6I6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uKk-9J-LT8" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -643,62 +646,62 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="F4k-MX-V8c" customClass="I">
+                            <datePicker contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="F4k-MX-V8c" customClass="I">
                                 <rect key="frame" x="0.0" y="64" width="600" height="216"/>
                                 <date key="date" timeIntervalSinceReferenceDate="481252159.44744402">
                                     <!--2016-04-02 01:09:19 +0000-->
                                 </date>
                             </datePicker>
-                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yen-od-Me3">
-                                <rect key="frame" x="0.0" y="288" width="600" height="150"/>
+                            <pickerView tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yen-od-Me3">
+                                <rect key="frame" x="0.0" y="266" width="600" height="150"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="oud-a1-kkC"/>
+                                    <constraint firstAttribute="height" constant="150" id="bqq-fW-xTp"/>
                                 </constraints>
                             </pickerView>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NYA-hQ-8qs">
+                            <navigationBar contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NYA-hQ-8qs">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
                                     <navigationItem title="eXchange Request" id="9Od-9b-oS8">
                                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="aBE-77-OIl">
                                             <connections>
+                                                <action selector="cancelButton:" destination="bNo-te-tj6" id="IOi-Kg-I8e"/>
                                                 <segue destination="s4G-Hm-BJq" kind="unwind" identifier="unwindCancel" unwindAction="unfinishedUnwind:" id="qbU-4g-M9a"/>
                                             </connections>
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="BTd-4c-N89">
                                             <connections>
+                                                <action selector="doneButton:" destination="bNo-te-tj6" id="QwX-ho-HUN"/>
                                                 <segue destination="s4G-Hm-BJq" kind="unwind" identifier="unwindDone" unwindAction="unfinishedUnwind:" id="iFW-Zu-3G8"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal Selected:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3f-rA-TBc">
-                                <rect key="frame" x="0.0" y="480" width="600" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <pickerView tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j80-xV-Fv8">
+                                <rect key="frame" x="0.0" y="393" width="600" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="WYS-Uz-rsb"/>
+                                </constraints>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Yen-od-Me3" firstAttribute="leading" secondItem="F4k-MX-V8c" secondAttribute="leading" id="4xb-oS-b4q"/>
-                            <constraint firstItem="Yen-od-Me3" firstAttribute="leading" secondItem="I3f-rA-TBc" secondAttribute="leading" id="BJS-b9-Adh"/>
-                            <constraint firstItem="Yen-od-Me3" firstAttribute="leading" secondItem="NYW-sZ-OZh" secondAttribute="leading" id="CvP-II-VTR"/>
-                            <constraint firstItem="Yen-od-Me3" firstAttribute="trailing" secondItem="F4k-MX-V8c" secondAttribute="trailing" id="KQU-bg-16e"/>
-                            <constraint firstItem="I3f-rA-TBc" firstAttribute="top" secondItem="Yen-od-Me3" secondAttribute="bottom" constant="42" id="N0A-yl-cuv"/>
-                            <constraint firstItem="Yen-od-Me3" firstAttribute="trailing" secondItem="I3f-rA-TBc" secondAttribute="trailing" id="Rp9-Aa-tmg"/>
-                            <constraint firstItem="NYA-hQ-8qs" firstAttribute="trailing" secondItem="F4k-MX-V8c" secondAttribute="trailing" id="RyU-m1-aIX"/>
-                            <constraint firstAttribute="trailing" secondItem="Yen-od-Me3" secondAttribute="trailing" id="WIa-Lg-nnf"/>
-                            <constraint firstItem="Yen-od-Me3" firstAttribute="top" secondItem="F4k-MX-V8c" secondAttribute="bottom" constant="8" symbolic="YES" id="fjI-vp-zIG"/>
-                            <constraint firstItem="NYA-hQ-8qs" firstAttribute="top" secondItem="rh8-yL-yco" secondAttribute="bottom" id="o1W-6d-Mhd"/>
-                            <constraint firstItem="NYA-hQ-8qs" firstAttribute="leading" secondItem="F4k-MX-V8c" secondAttribute="leading" id="orj-oT-Fwu"/>
-                            <constraint firstItem="Yen-od-Me3" firstAttribute="top" secondItem="NYW-sZ-OZh" secondAttribute="top" constant="288" id="uBb-v1-Trc"/>
+                            <constraint firstItem="iPi-t3-sDd" firstAttribute="top" secondItem="j80-xV-Fv8" secondAttribute="bottom" constant="8" symbolic="YES" id="0aL-0d-DQZ"/>
+                            <constraint firstItem="j80-xV-Fv8" firstAttribute="leading" secondItem="Yen-od-Me3" secondAttribute="leading" id="96L-EW-5cY"/>
+                            <constraint firstItem="j80-xV-Fv8" firstAttribute="trailing" secondItem="Yen-od-Me3" secondAttribute="trailing" id="BHw-YD-YVD"/>
+                            <constraint firstItem="j80-xV-Fv8" firstAttribute="trailing" secondItem="F4k-MX-V8c" secondAttribute="trailing" id="FBs-dq-aeC"/>
+                            <constraint firstItem="j80-xV-Fv8" firstAttribute="leading" secondItem="NYA-hQ-8qs" secondAttribute="leading" id="U8X-iD-pQS"/>
+                            <constraint firstItem="j80-xV-Fv8" firstAttribute="leading" secondItem="NYW-sZ-OZh" secondAttribute="leading" id="b2y-cs-oVj"/>
+                            <constraint firstItem="j80-xV-Fv8" firstAttribute="trailing" secondItem="NYA-hQ-8qs" secondAttribute="trailing" id="eba-ZQ-Kjc"/>
+                            <constraint firstItem="iPi-t3-sDd" firstAttribute="top" secondItem="Yen-od-Me3" secondAttribute="bottom" constant="135" id="k7D-fd-PQI"/>
+                            <constraint firstAttribute="trailing" secondItem="j80-xV-Fv8" secondAttribute="trailing" id="ohz-lX-X65"/>
+                            <constraint firstItem="j80-xV-Fv8" firstAttribute="leading" secondItem="F4k-MX-V8c" secondAttribute="leading" id="ryA-uf-JCk"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="clubPicker" destination="Yen-od-Me3" id="Sfg-Gh-rMj"/>
                         <outlet property="datePicker" destination="F4k-MX-V8c" id="oXc-jh-Zg9"/>
-                        <outlet property="mealSelectedLabel" destination="I3f-rA-TBc" id="tXF-dm-zbk"/>
+                        <outlet property="mealTypePicker" destination="j80-xV-Fv8" id="lBk-Zf-GdP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5RV-qK-JUp" userLabel="First Responder" sceneMemberID="firstResponder"/>
