--- a/eXchange/Base.lproj/Main.storyboard
+++ b/eXchange/Base.lproj/Main.storyboard
@@ -646,19 +646,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <datePicker contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="F4k-MX-V8c" customClass="I">
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="F4k-MX-V8c" customClass="I">
                                 <rect key="frame" x="0.0" y="64" width="600" height="216"/>
                                 <date key="date" timeIntervalSinceReferenceDate="481252159.44744402">
                                     <!--2016-04-02 01:09:19 +0000-->
                                 </date>
                             </datePicker>
-                            <pickerView tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yen-od-Me3">
-                                <rect key="frame" x="0.0" y="266" width="600" height="150"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="bqq-fW-xTp"/>
-                                </constraints>
-                            </pickerView>
-                            <navigationBar contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NYA-hQ-8qs">
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NYA-hQ-8qs">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
                                     <navigationItem title="eXchange Request" id="9Od-9b-oS8">
@@ -675,31 +669,37 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <pickerView tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j80-xV-Fv8">
-                                <rect key="frame" x="0.0" y="393" width="600" height="150"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="WYS-Uz-rsb"/>
-                                </constraints>
-                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Club" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G3F-S3-Pw2">
+                                <rect key="frame" x="126" y="425" width="83" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Meal" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="npa-Jq-4E2">
+                                <rect key="frame" x="116" y="314" width="68" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="iPi-t3-sDd" firstAttribute="top" secondItem="j80-xV-Fv8" secondAttribute="bottom" constant="8" symbolic="YES" id="0aL-0d-DQZ"/>
-                            <constraint firstItem="j80-xV-Fv8" firstAttribute="leading" secondItem="Yen-od-Me3" secondAttribute="leading" id="96L-EW-5cY"/>
-                            <constraint firstItem="j80-xV-Fv8" firstAttribute="trailing" secondItem="Yen-od-Me3" secondAttribute="trailing" id="BHw-YD-YVD"/>
-                            <constraint firstItem="j80-xV-Fv8" firstAttribute="trailing" secondItem="F4k-MX-V8c" secondAttribute="trailing" id="FBs-dq-aeC"/>
-                            <constraint firstItem="j80-xV-Fv8" firstAttribute="leading" secondItem="NYA-hQ-8qs" secondAttribute="leading" id="U8X-iD-pQS"/>
-                            <constraint firstItem="j80-xV-Fv8" firstAttribute="leading" secondItem="NYW-sZ-OZh" secondAttribute="leading" id="b2y-cs-oVj"/>
-                            <constraint firstItem="j80-xV-Fv8" firstAttribute="trailing" secondItem="NYA-hQ-8qs" secondAttribute="trailing" id="eba-ZQ-Kjc"/>
-                            <constraint firstItem="iPi-t3-sDd" firstAttribute="top" secondItem="Yen-od-Me3" secondAttribute="bottom" constant="135" id="k7D-fd-PQI"/>
-                            <constraint firstAttribute="trailing" secondItem="j80-xV-Fv8" secondAttribute="trailing" id="ohz-lX-X65"/>
-                            <constraint firstItem="j80-xV-Fv8" firstAttribute="leading" secondItem="F4k-MX-V8c" secondAttribute="leading" id="ryA-uf-JCk"/>
+                            <constraint firstItem="F4k-MX-V8c" firstAttribute="trailing" secondItem="NYA-hQ-8qs" secondAttribute="trailing" id="Grl-4C-r2j"/>
+                            <constraint firstItem="npa-Jq-4E2" firstAttribute="top" secondItem="F4k-MX-V8c" secondAttribute="bottom" constant="34" id="ZdQ-gj-Vqb"/>
+                            <constraint firstItem="F4k-MX-V8c" firstAttribute="top" secondItem="NYA-hQ-8qs" secondAttribute="bottom" id="avt-jc-FhE"/>
+                            <constraint firstItem="iPi-t3-sDd" firstAttribute="top" secondItem="G3F-S3-Pw2" secondAttribute="bottom" constant="105" id="fvl-Bu-JfU"/>
+                            <constraint firstItem="F4k-MX-V8c" firstAttribute="leading" secondItem="NYA-hQ-8qs" secondAttribute="leading" id="gCW-GL-IQ4"/>
+                            <constraint firstItem="npa-Jq-4E2" firstAttribute="leading" secondItem="NYW-sZ-OZh" secondAttribute="leading" constant="156" id="jGB-vg-Ego"/>
+                            <constraint firstItem="npa-Jq-4E2" firstAttribute="trailing" secondItem="G3F-S3-Pw2" secondAttribute="trailing" constant="-15" id="uKo-si-j33"/>
+                            <constraint firstItem="F4k-MX-V8c" firstAttribute="leading" secondItem="NYW-sZ-OZh" secondAttribute="leading" id="umV-vy-rbZ"/>
+                            <constraint firstAttribute="trailing" secondItem="F4k-MX-V8c" secondAttribute="trailing" id="xsg-WP-ner"/>
+                            <constraint firstItem="F4k-MX-V8c" firstAttribute="top" secondItem="NYW-sZ-OZh" secondAttribute="top" constant="64" id="zKq-bo-cri"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="clubPicker" destination="Yen-od-Me3" id="Sfg-Gh-rMj"/>
+                        <outlet property="club" destination="G3F-S3-Pw2" id="SGO-QT-kUu"/>
                         <outlet property="datePicker" destination="F4k-MX-V8c" id="oXc-jh-Zg9"/>
-                        <outlet property="mealTypePicker" destination="j80-xV-Fv8" id="lBk-Zf-GdP"/>
+                        <outlet property="meal" destination="npa-Jq-4E2" id="lTg-4d-LeU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5RV-qK-JUp" userLabel="First Responder" sceneMemberID="firstResponder"/>
