--- a/eXchange/Base.lproj/Main.storyboard
+++ b/eXchange/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="iHA-ld-opb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="iHA-ld-opb">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -60,7 +60,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fwO-t4-XOn">
-                                                    <rect key="frame" x="110" y="20" width="414" height="21"/>
+                                                    <rect key="frame" x="110" y="20" width="470" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -88,7 +88,7 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="A0N-jQ-IJ9" firstAttribute="leading" secondItem="fwO-t4-XOn" secondAttribute="trailing" constant="8" symbolic="YES" id="6SU-zw-PgC"/>
+                                                <constraint firstItem="A0N-jQ-IJ9" firstAttribute="leading" secondItem="fwO-t4-XOn" secondAttribute="trailing" constant="-48" id="6SU-zw-PgC"/>
                                                 <constraint firstItem="A0N-jQ-IJ9" firstAttribute="width" secondItem="A0N-jQ-IJ9" secondAttribute="height" multiplier="1:1" id="6bK-VW-eoF"/>
                                                 <constraint firstItem="KQf-3s-vOY" firstAttribute="bottom" secondItem="zDE-Lj-orL" secondAttribute="bottom" constant="-16" id="EaJ-1V-Ag5"/>
                                                 <constraint firstItem="A0N-jQ-IJ9" firstAttribute="leading" secondItem="KQf-3s-vOY" secondAttribute="trailing" constant="8" symbolic="YES" id="c3i-bK-k86"/>
