--- a/eXchange/Base.lproj/Main.storyboard
+++ b/eXchange/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="gz2-iK-ehu">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="gz2-iK-ehu">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -194,7 +194,7 @@
             </objects>
             <point key="canvasLocation" x="277" y="253"/>
         </scene>
-        <!--User-->
+        <!--MyMeals-->
         <scene sceneID="k8E-g6-55P">
             <objects>
                 <viewController id="2gH-u9-gRa" customClass="UserViewController" customModule="eXchange" customModuleProvider="target" sceneMemberID="viewController">
@@ -330,7 +330,7 @@
                             <constraint firstItem="jDv-YE-b4f" firstAttribute="width" secondItem="5La-lO-Wlv" secondAttribute="width" id="x9n-55-T4N"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="User" image="user" id="r4a-ck-zBB"/>
+                    <tabBarItem key="tabBarItem" title="MyMeals" image="user" id="r4a-ck-zBB"/>
                     <connections>
                         <outlet property="eXchangeBanner" destination="yFO-JE-I60" id="eaQ-v5-Zj3"/>
                         <outlet property="historyButton" destination="5La-lO-Wlv" id="Ncg-f2-UAj"/>
