--- a/eXchange/Base.lproj/Main.storyboard
+++ b/eXchange/Base.lproj/Main.storyboard
@@ -209,14 +209,26 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Gzk-fD-iFr">
                                 <rect key="frame" x="20" y="20" width="560" height="110"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="110" id="J9N-jk-2xa"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AR4-8D-4ND">
+                                <rect key="frame" x="20" y="138" width="175" height="175"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="175" id="d9N-Tq-1aQ"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Gzk-fD-iFr" firstAttribute="trailing" secondItem="sST-EN-rM0" secondAttribute="trailingMargin" id="5EW-DG-J8g"/>
                             <constraint firstItem="Gzk-fD-iFr" firstAttribute="top" secondItem="ZUw-HI-XcN" secondAttribute="bottom" id="Lk5-NE-byv"/>
+                            <constraint firstItem="lXG-ML-yIS" firstAttribute="top" secondItem="AR4-8D-4ND" secondAttribute="bottom" constant="238" id="Z3G-tq-592"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="AR4-8D-4ND" secondAttribute="leading" id="ZQF-qN-k7g"/>
                             <constraint firstItem="Gzk-fD-iFr" firstAttribute="leading" secondItem="sST-EN-rM0" secondAttribute="leadingMargin" id="i28-IP-slC"/>
                             <constraint firstItem="lXG-ML-yIS" firstAttribute="top" secondItem="Gzk-fD-iFr" secondAttribute="bottom" constant="421" id="jD4-Lz-KC8"/>
+                            <constraint firstItem="AR4-8D-4ND" firstAttribute="top" secondItem="Gzk-fD-iFr" secondAttribute="bottom" constant="8" id="zOT-xf-HAV"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="User" image="user" id="NXe-TZ-lCX"/>
